<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.imixs.workflow</groupId>
	<artifactId>imixs-workflow</artifactId>
	<name>Imixs Workflow</name>
	<packaging>pom</packaging>
	<version>6.0.0-SNAPSHOT</version>

	<modules>
		<module>imixs-workflow-core</module>
		<module>imixs-workflow-engine</module>
		<module>imixs-workflow-faces</module>
		<module>imixs-workflow-jax-rs</module>
		<module>imixs-workflow-index-lucene</module>
		<module>imixs-workflow-index-solr</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- dependency versions -->
		<jakarta.version>9.0</jakarta.version>
		<microprofile.version>3.0</microprofile.version>
		<microprofile-metrics.version>2.3</microprofile-metrics.version>
		<lucene.version>7.7.3</lucene.version>
	</properties>


	<description>
		Imixs Workflow provides a platform for an open and standardized workflow technology. 
		This is the meta project for the Imixs Workflow artefacts 
		imixs-workflow-core, imixs-workflow-engine, imixs-workflow-faces and imixs-workflow-jax-rs
	</description>

	<url>https://github.com/imixs/imixs-workflow</url>
	<organization>
		<name>Imixs Software Solutions GmbH</name>
		<url>http://www.imixs.com</url>
	</organization>
	<inceptionYear>2006</inceptionYear>

	<developers>
		<developer>
			<id>rsoika</id>
			<name>Ralph Soika</name>
			<email>ralph.soika@imixs.com</email>
			<url>http://blog.imixs.org/</url>
			<organization>Imixs Software Solutions GmbH</organization>
			<organizationUrl>http://www.imixs.com</organizationUrl>
			<roles>
				<role>developer</role>
				<role>testing</role>
			</roles>
			<timezone>2</timezone>
		</developer>

		<developer>
			<id>gaheinle</id>
			<name>Gaby Heinle</name>
			<email />
			<url />
			<organization>Imixs Software Solutions GmbH</organization>
			<organizationUrl>http://www.imixs.com</organizationUrl>
			<roles>
				<role>developer</role>
				<role>testing</role>
			</roles>
			<timezone>2</timezone>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/imixs/imixs-workflow.git</connection>
		<developerConnection>scm:git:https://github.com/imixs/imixs-workflow.git</developerConnection>
		<url>https://github.com/imixs/imixs-workflow/</url>
		<tag>HEAD</tag>
	</scm>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/imixs/imixs-workflow/issues</url>
	</issueManagement>

	<mailingLists>
		<!-- no mailing lists supported -->
	</mailingLists>

	<licenses>
		<license>
			<name>GNU General Public License</name>
			<url>http://www.gnu.org/licenses/gpl-2.0.txt</url>
			<distribution>repo</distribution>
			<comments>All the results of the imixs workflow project are subject to the GPL licensing model. </comments>
		</license>
	</licenses>

	<build>
		<plugins>

			<!-- use JDK settings for compiling -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>

			<!-- release management -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<useReleaseProfile>false</useReleaseProfile>
					<releaseProfiles>release</releaseProfiles>
					<goals>deploy</goals>
				</configuration>
			</plugin>
			<!-- release to Maven central -->
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.8</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
					<stagingProgressTimeoutMinutes>15</stagingProgressTimeoutMinutes>
				</configuration>
			</plugin>

			<!--  maven site, doc and reporting -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.9.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<additionalOptions>-Xdoclint:none</additionalOptions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>

			<!--  finding the latest plugin or dependency versions
			    mvn versions:display-plugin-updates
			    
			 -->
			<plugin>
			    <groupId>org.codehaus.mojo</groupId>
			    <artifactId>versions-maven-plugin</artifactId>
			    <version>2.5</version>
			    <configuration>
			        <generateBackupPoms>false</generateBackupPoms>
			    </configuration>
			</plugin>


		</plugins>
	</build>

	<reporting>
		<plugins>
			<!-- java doc -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<additionalOptions>-Xdoclint:none</additionalOptions>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>
		</plugins>
	</reporting>

	<profiles>
		<!-- Activate using the release property -->
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<!-- To generate javadoc -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.2.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.2.0</version>
						<configuration>
							<additionalOptions>-Xdoclint:none</additionalOptions>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<!-- To sign the artifacts -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencies>
		<!-- Jakarta EE -->
		<!--  
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>${jakarta.version}</version>
			<scope>provided</scope>
		</dependency>
		-->
		<dependency>
		    <groupId>jakarta.platform</groupId>
		    <artifactId>jakarta.jakartaee-api</artifactId>
		    <version>9.0.0</version>
		    <scope>provided</scope>
		</dependency>

		<!-- Microprofile -->
		<dependency>
			<groupId>org.eclipse.microprofile</groupId>
			<artifactId>microprofile</artifactId>
			<version>${microprofile.version}</version>
			<type>pom</type>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.eclipse.microprofile.metrics</groupId>
			<artifactId>microprofile-metrics-api</artifactId>
			<version>${microprofile-metrics.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- JUnit Tests -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.9.5</version>
			<scope>test</scope>
		</dependency>
		
		
		<!-- 
		<dependency>
			<groupId>javax.json</groupId>
			<artifactId>javax.json-api</artifactId>
			<version>1.1.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>javax.json</artifactId>
			<version>1.1.4</version>
			<scope>test</scope>
		</dependency>
		 -->
		
		<dependency>
		    <groupId>org.glassfish</groupId>
		    <artifactId>jakarta.json</artifactId>
		    <version>2.0.0</version>
		    <scope>test</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.glassfish.jaxb</groupId>
		    <artifactId>jaxb-runtime</artifactId>
		    <version>3.0.0</version>
		    <scope>test</scope>
		</dependency>
		
    	<dependency>
	       <groupId>jakarta.xml.bind</groupId>
	       <artifactId>jakarta.xml.bind-api</artifactId>
	       <version>3.0.0</version>
	       <scope>test</scope>
	    </dependency>
	</dependencies>


	<!-- Distributen Management oss.sonatype.org -->
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

</project>